src/test/ui/parser/issues/issue-76437-const.stderr
error: expected one of `async`, `extern`, `fn`, or `unsafe`, found keyword `pub`
  --> $DIR/issue-76437-const.rs:4:11
   |
LL |     const pub fn t() {}
   |     ------^^^
   |     |     |
   |     |     expected one of `async`, `extern`, `fn`, or `unsafe`
   |     help: visibility `pub` must come before `const`: `pub const`

error: aborting due to previous error

